# gesture_tools

./: .gitignore  README.md  VTD_PLAN.md  config.json  extract_mask_kinematics.py  extract_tongue_complexity.py  get_tongue_contours.py  pyproject.toml  summarize_complexity.py
src/: extract_mask_kinematics.py  extract_vtd.py  get_tongue_contours.py  get_tt_region.py  ling_complexity.py  plot_pts_contour.py  plot_tongue.py  ssanova.py  summarize_complexity.py
